--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -729,7 +729,7 @@
                   </label>
                 </div>
               </div>
-              <domain-custom-vcl id="customVCLrulesBlock" ng-if="model.rev_component_bp.enable_cache&&model.rev_component_bp.custom_vcl.enabled" class="" ng-model="model.rev_component_bp.custom_vcl"></domain-custom-vcl>
+              <domain-custom-vcl id="customVCLrulesBlock" ng-if="model.rev_component_bp.enable_cache&&model.rev_component_bp.custom_vcl.enabled" class="" ng-model="model.rev_component_bp.custom_vcl" is-edit-locked="_isEditLocked"></domain-custom-vcl>
               <!-- //  “Custom VCL Rules” -->
               <hr>
             </uib-tab>
