--- a/code/dev/parts/domains/domain-custom-vcl-backends/domain-custom-vcl-backends.tpl.html
+++ b/code/dev/parts/domains/domain-custom-vcl-backends/domain-custom-vcl-backends.tpl.html
@@ -9,7 +9,7 @@
               <i class="glyphicon glyphicon-chevron-down"></i>
             </a>
           </span>
-    <span id="addNewBackendBlock" ng-click="$ctrl.onAddNewBackendBlock()" class="btn btn-primary btn-sm pull-right" title="Add New Backend Block"><i class="glyphicon glyphicon-plus"></i></span>
+    <span id="addNewBackendBlock" ng-click="$ctrl.onAddNewBackendBlock()" class="btn btn-primary btn-sm pull-right" ng-class="{'disabled': isEditLocked}" title="Add New Backend Block"><i class="glyphicon glyphicon-plus"></i></span>
     <h4><b>Backends</b></h4>
   </div>
   <div class="panel-body">
@@ -25,12 +25,12 @@
               <a class="btn btn-default btn-xs" href="" title="Expand Block" ng-show="item.$$backendBlockState.isCollapsed" ng-click="item.$$backendBlockState.isCollapsed = !item.$$backendBlockState.isCollapsed">
                 <i class="glyphicon glyphicon-chevron-down"></i>
               </a>
-              <a class="btn btn-default btn-xs" href="" ng-click="$ctrl.onUpBackendBlock(item)"><i class="glyphicon glyphicon-arrow-up" title="Move One Position Up"></i></a>
-              <a class="btn btn-default btn-xs" href="" ng-click="$ctrl.onDownBackendBlock(item)"><i class="glyphicon glyphicon-arrow-down" title="Move One Position Down"></i></a>
+              <a class="btn btn-default btn-xs" href="" ng-click="$ctrl.onUpBackendBlock(item)" ng-class="{'disabled': isEditLocked}"><i class="glyphicon glyphicon-arrow-up" title="Move One Position Up"></i></a>
+              <a class="btn btn-default btn-xs" href="" ng-click="$ctrl.onDownBackendBlock(item)" ng-class="{'disabled': isEditLocked}"><i class="glyphicon glyphicon-arrow-down" title="Move One Position Down"></i></a>
             </div>
             <div class="pull-right panel-button-right">
               <!-- remove widget -->
-              <a href="" title="Remove Rule" ng-click="$ctrl.onRemoveBackendBlock($index)" ng-if="!editMode">
+              <a href="" title="Remove Rule" ng-click="$ctrl.onRemoveBackendBlock($index)" ng-if="!editMode" ng-class="{'disabled':_isEditLocked}">
                 <i class="glyphicon glyphicon-remove"></i>
               </a>
             </div>
@@ -46,7 +46,7 @@
           <label for="backendName" class="col-sm-3 control-label">
             Backend Name *</label>
           <div class="col-sm-9">
-            <input type="text" class="form-control inline-block" ng-model="item.name" ng-disabled="_loading" id="origin_host_header" name="backendName" placeholder="" ng-maxlength="255" required>
+            <input type="text" class="form-control inline-block" ng-model="item.name" ng-disabled="_loading || _isEditLocked" id="origin_host_header" name="backendName" placeholder="" ng-maxlength="255" required>
             <label for="backendName" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Use the field to name the backend. In VCL functions the backend can be referenced using internal function “REV_BACKEND()">
               <i class="fa fa-question-circle"></i>
             </label>
@@ -56,35 +56,30 @@
           </div>
         </div>
         <!-- Backend VCL Code-->
-        <div class="form-group" ng-class="{'has-error': customVclBackendForm.backendVcl.$invalid && customVclBackendForm.backendVcl.$dirty}">
-          <label for="backendVcl" class="col-sm-3 control-label">
+        <div class="form-group" ng-class="{'has-error': customVclBackendForm.vclHit.$invalid && customVclBackendForm.vclHit.$dirty}">
+          <label for="vclHit" class="col-sm-3 control-label">
             Backend VCL Code *</label>
           <div class="col-sm-9">
-            <div class="form-group">
-              <textarea id="vclHit" name="vclHit" ng-model="item.vcl" placeholder="" class="form-control text--courier inline-block" ng-disabled="_loading">
+              <textarea id="vclHit" name="vclHit" ng-model="item.vcl" placeholder="" class="form-control text--courier inline-block" ng-maxlength="40000" ng-disabled="_loading || _isEditLocked">
               </textarea>
-              <label for="backendVcl" popover-append-to-body="{{true}}" class="text-info" popover-trigger="mouseenter" uib-popover="Use the text field to specify Varnish’s 'backend' code">
+              <label for="vclHit" popover-append-to-body="{{true}}" class="text-info" popover-trigger="mouseenter" uib-popover="Use the text field to specify Varnish’s 'backend' code">
                 <i class="fa fa-question-circle"></i>
               </label>
-            </div>
-            <div class="error-messages" ng-messages="customVclBackendForm.backendVcl.$error" role="alert" ng-messages-multiple>
+            <div class="error-messages" ng-messages="customVclBackendForm.vclHit.$error" role="alert" ng-messages-multiple>
               <div ng-messages-include="parts/shared/error-messages.html"></div>
             </div>
           </div>
         </div>
         <!-- Dynamic Origin DNS Name Lookups -->
-        <div class="form-group" ng-class="{'has-error': customVclBackendForm.backendVcl.$invalid && customVclBackendForm.backendVcl.$dirty}">
-          <label for="backendVcl" class="col-sm-3 control-label">
+        <div class="form-group" ng-class="{'has-error': customVclBackendForm.dynamicOriginDNSnameLookups.$invalid && customVclBackendForm.dynamicOriginDNSnameLookups.$dirty}">
+          <label for="dynamicOriginDNSnameLookups" class="col-sm-3 control-label">
             Dynamic Origin DNS Name Lookups</label>
           <div class="col-sm-9">
-            <toggle-switch id="dynamicOriginDNSnameLookups" is-disabled="_loading" ng-model="item.dynamic" on-label="On" off-label="Off">
+            <toggle-switch id="dynamicOriginDNSnameLookups" name="dynamicOriginDNSnameLookups" is-disabled="_loading || _isEditLocked" ng-model="item.dynamic" on-label="On" off-label="Off">
             </toggle-switch>
             <label for="dynamic" class="text-info" popover-trigger="mouseenter" uib-popover="Enables/disables dynamic DNS lookups (respecting of DNS TTL) of origin host DNS names">
               <i class="fa fa-question-circle"></i>
             </label>
-            <div class="error-messages" ng-messages="customVclBackendForm.backendVcl.$error" role="alert" ng-messages-multiple>
-              <div ng-messages-include="parts/shared/error-messages.html"></div>
-            </div>
           </div>
         </div>
         <!-- Origin TCP Port -->
@@ -93,7 +88,7 @@
             Origin TCP Port *
           </label>
           <div class="col-md-9">
-            <input type="number" id="proxy_timeout" name="backendOriginTCPPort" class="form-control inline-block" ng-disabled="_loading" ng-model="item.port" ng-min="1" ng-max="65536" required>
+            <input type="number" id="proxy_timeout" name="backendOriginTCPPort" class="form-control inline-block" ng-disabled="_loading || _isEditLocked" ng-model="item.port" ng-min="1" ng-max="65536" required>
             <label for="backendOriginTCPPort" class="text-info" popover-trigger="mouseenter" uib-popover="Origin TCP Port (range 1-65536)">
               <i class="fa fa-question-circle"></i>
             </label>
@@ -107,7 +102,7 @@
           <label for="originHost" class="col-sm-3 control-label">
             Origin Host *</label>
           <div class="col-sm-9">
-            <input type="text" validate-origin-server-name class="form-control inline-block" ng-disabled="_loading" ng-model="item.host" id="originHost" name="originHost" placeholder="Origin Host" ng-maxlength="50" required>
+            <input type="text" validate-origin-server-name class="form-control inline-block" ng-disabled="_loading || _isEditLocked" ng-model="item.host" id="originHost" name="originHost" placeholder="Origin Host" ng-maxlength="50" required>
             <label for="originHost" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Enter here a domain name or IPv4 address of the origin server">
               <i class="fa fa-question-circle"></i>
             </label>
