Update Third-Party Links Tab - add property '_isEditLocked'

--- a/code/dev/parts/domains/domain-the-third-party-links/domain-the-third-party-links.tpl.html
+++ b/code/dev/parts/domains/domain-the-third-party-links/domain-the-third-party-links.tpl.html
@@ -5,7 +5,7 @@
       Accelerate Third-Party Links Specified In HTML Code
     </label>
     <div class="col-md-9">
-      <toggle-switch id="enable3rdPartyRewrite" ng-model="$ctrl.model.enable_3rd_party_rewrite" on-label="On" off-label="Off">
+      <toggle-switch id="enable3rdPartyRewrite" ng-model="$ctrl.model.enable_3rd_party_rewrite" on-label="On" off-label="Off" is-disabled="_isEditLocked">
       </toggle-switch>
       <label for="enable_3rd_party_rewrite" class="text-info" popover-trigger="mouseenter" uib-popover="This switch enables/disables the acceleration of objects/links specified directly in HTML code using “src” statements (normally used for images and JavaScript scripts). Specific domain names or URLs of third-party links should be provided in the next configuration field.">
         <i class="fa fa-question-circle"></i>
@@ -18,7 +18,7 @@
       Third-Party Links Specified in HTML Code
     </label>
     <div class="col-sm-9">
-      <ui-select name="thirdPartyUrls" id="thirdPartyUrls" validate-domain-name-or-url tagging tagging-label="Add Third-Party Domain Names Or URLs" multiple tagging-tokens="SPACE|," theme="bootstrap" class="form-control inline-block" ng-disabled="_loading" ng-model="$ctrl.model['3rd_party_urls']">
+      <ui-select name="thirdPartyUrls" id="thirdPartyUrls" validate-domain-name-or-url tagging tagging-label="Add Third-Party Domain Names Or URLs" multiple tagging-tokens="SPACE|," theme="bootstrap" class="form-control inline-block" ng-disabled="_loading || _isEditLocked" ng-model="$ctrl.model['3rd_party_urls']">
         <ui-select-match placeholder="Add Third-Party Domain Names Or URLs...">{{$item}}</ui-select-match>
         <ui-select-choices repeat="party_urls in $ctrl.model['3rd_party_urls']">
           {{party_urls}}
@@ -39,7 +39,7 @@
       Accelerate Third-Party Links Generated Runtime in Inline JavaScript Code
     </label>
     <div class="col-md-9">
-      <toggle-switch id="enable3rdPartyRootRewrite" name="enable_3rd_party_root_rewrite" ng-model="$ctrl.model.enable_3rd_party_root_rewrite" on-label="On" off-label="Off">
+      <toggle-switch id="enable3rdPartyRootRewrite" name="enable_3rd_party_root_rewrite" ng-model="$ctrl.model.enable_3rd_party_root_rewrite" on-label="On" off-label="Off" is-disabled="_isEditLocked">
       </toggle-switch>
       <label for="enable_3rd_party_root_rewrite" class="text-info" popover-trigger="mouseenter" uib-popover="Use the switch to enable/disable the acceleration of third-party objects fetched in runtime by inline Javascript code mentioned directly in HTML code">
         <i class="fa fa-question-circle"></i>
@@ -53,7 +53,7 @@
       Third-Party Links Generated Runtime By Inline Javascript Code
     </label>
     <div class="col-sm-9">
-      <ui-select id="thirdPartyRootRewriteDomains" name="thirdPartyRootRewriteDomains" validate-domain-name-or-url tagging tagging-label="Add Third-Party Domain Names Or URLs" multiple tagging-tokens="SPACE|," theme="bootstrap" class="form-control inline-block" ng-disabled="_loading" ng-model="$ctrl.model['3rd_party_root_rewrite_domains']">
+      <ui-select id="thirdPartyRootRewriteDomains" name="thirdPartyRootRewriteDomains" validate-domain-name-or-url tagging tagging-label="Add Third-Party Domain Names Or URLs" multiple tagging-tokens="SPACE|," theme="bootstrap" class="form-control inline-block" ng-disabled="_loading || _isEditLocked" ng-model="$ctrl.model['3rd_party_root_rewrite_domains']">
         <ui-select-match placeholder="Add Third-Party Domain Names Or URLs...">{{$item}}</ui-select-match>
         <ui-select-choices repeat="rewrite_domain in $ctrl.model['3rd_party_root_rewrite_domains']">
           {{rewrite_domain}}
@@ -74,7 +74,7 @@
       Accelerate Third-Party Links Generated Runtime in Third-Party JavaScript Code
     </label>
     <div class="col-md-9">
-      <toggle-switch id="enable3rdPartyRuntimeRewrite" ng-model="$ctrl.model.enable_3rd_party_runtime_rewrite" on-label="On" off-label="Off">
+      <toggle-switch id="enable3rdPartyRuntimeRewrite" ng-model="$ctrl.model.enable_3rd_party_runtime_rewrite" on-label="On" off-label="Off" is-disabled="_isEditLocked">
       </toggle-switch>
       <label for="enable_3rd_party_runtime_rewrite" class="text-info" popover-trigger="mouseenter" uib-popover="Use the switch to enable/disable the acceleration of third-party objects referenced in runtime by third-party Javascript scripts loaded in HTML page">
         <i class="fa fa-question-circle"></i>
@@ -87,7 +87,7 @@
       Third-Party Links Generated Runtime By Third-Party Javascript Code
     </label>
     <div class="col-sm-9">
-      <ui-select id="thirdPartyRuntimeDomains" name="thirdPartyRuntimeDomains" validate-domain-name-or-url tagging tagging-label="Add Third-Party Domain Names Or URLs" multiple tagging-tokens="SPACE|," theme="bootstrap" class="form-control inline-block" ng-disabled="_loading" ng-model="$ctrl.model['3rd_party_runtime_domains']">
+      <ui-select id="thirdPartyRuntimeDomains" name="thirdPartyRuntimeDomains" validate-domain-name-or-url tagging tagging-label="Add Third-Party Domain Names Or URLs" multiple tagging-tokens="SPACE|," theme="bootstrap" class="form-control inline-block" ng-disabled="_loading || _isEditLocked" ng-model="$ctrl.model['3rd_party_runtime_domains']">
         <ui-select-match placeholder="Add Third-Party Domain Names Or URLs...">{{$item}}</ui-select-match>
         <ui-select-choices repeat="runtime_domain in $ctrl.model['3rd_party_runtime_domains']">
           {{runtime_domain}}
